--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,86 +1,33 @@
-@import '../variables';
-
 .header {
-	
-}
-
-.nav {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 100px;
-	&__links {
+	height: 100vh;
+	background: url('../../assets/img/back.jpg') no-repeat center center;
+	background-size: 100%;
+	&__wrap {
 		display: flex;
-		justify-content: space-between;
-		list-style: none;
-		& li {
-			margin: 0 2em;
-			display: inline-flex;
-			&:hover {
-				cursor: pointer;
-				color: $linkhover;
-			}
-		}
-		transition: all 0.2s ease;
-		-webkit-transition: all 0.2s ease;
-		-moz-transition: all 0.2s ease;
-		-ms-transition: all 0.2s ease;
-		-o-transition: all 0.2s ease;
-	}
-	&__menu {
-		width: 40px;
-		height: 30px;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
 		align-items: center;
-		& span {
-			position: relative;
-			display: block;
-			width: 100%;
-			height: 2px;
-			background-color: #fff;
-			&::after {
-				transition: all 0.3s ease;
-				-webkit-transition: all 0.5s ease;
-				-moz-transition: all 0.5s ease;
-				-ms-transition: all 0.5s ease;
-				-o-transition: all 0.5s ease;
-				content: '';
-				display: block;
-				position: absolute;
-				width: 0%;
-				height: 100%;
-				background-color: $linkhover;
-			}
+	}
+
+	&__promo {
+		margin-top: 35vh;
+		width: 50%;
+
+		& h1 {
+			font-weight: 600;
+			font-size: 5em;
+			font-style: italic;
+			margin: 0;
 		}
-		&:hover {
-			cursor: pointer;
-			& span {
-				&::after {
-					width: 100%;
-				}
-			}
+
+		& p {
+			margin-top: 1rem;
+			display: block;
+			font-size: 3em;
+			font-weight: 100;
+			font-style: italic;
+
 		}
 	}
-	&__call {
-		padding: 20px 30px;
-		border: 1px solid white;
-		border-radius: 50px;
-		-webkit-border-radius: 50px;
-		-moz-border-radius: 50px;
-		-ms-border-radius: 50px;
-		-o-border-radius: 50px;
-		&:hover {
-			background-color: #fff;
-			color: $linkhover;
-			cursor: pointer;
-		}
-		transition: all 0.2s ease;
-		-webkit-transition: all 0.2s ease;
-		-moz-transition: all 0.2s ease;
-		-ms-transition: all 0.2s ease;
-		-o-transition: all 0.2s ease;
-}
+	&__button {
+		margin-top: 2rem;
+	}
 }
