--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -313,24 +313,59 @@ body {
   font-family: "Exo 2", sans-serif;
   font-size: 14px;
   color: white;
-  font-weight: 400;
+  font-weight: 300;
 }
 
-a, button {
+h1,
+p,
+a,
+button {
   all: unset;
 }
 
 .container {
+  position: relative;
   max-width: 100%;
-  margin: 0 2em;
+  margin: 0 4em;
+}
+
+.button {
+  padding: 20px 3em;
+  border: 1px solid white;
+  font-weight: 200;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+}
+.button:hover {
+  cursor: pointer;
+  color: #4e553e;
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
+  -moz-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
+  box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
 }
 
 .nav {
+  position: fixed;
+  top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100px;
+  background-color: rgba(26, 26, 26, 0.3137254902);
+  z-index: 100;
+  -webkit-box-shadow: 0px 0px 45px 0px rgba(34, 34, 34, 0.19);
+  -moz-box-shadow: 0px 0px 45px 0px rgba(34, 34, 34, 0.19);
+  box-shadow: 0px 0px 45px 0px rgba(34, 34, 34, 0.19);
 }
 .nav__links {
   display: flex;
@@ -351,6 +386,7 @@ a, button {
   color: #4e553e;
 }
 .nav__menu {
+  margin-left: 4em;
   width: 40px;
   height: 30px;
   display: flex;
@@ -385,21 +421,35 @@ a, button {
   width: 100%;
 }
 .nav__call {
-  padding: 20px 30px;
-  border: 1px solid white;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  -o-border-radius: 50px;
-  transition: all 0.2s ease;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
+  margin-right: 4em;
 }
-.nav__call:hover {
-  background-color: #fff;
-  color: #4e553e;
-  cursor: pointer;
+
+.header {
+  height: 100vh;
+  background: url("../../assets/img/back.jpg") no-repeat center center;
+  background-size: 100%;
+}
+.header__wrap {
+  display: flex;
+  align-items: center;
+}
+.header__promo {
+  margin-top: 35vh;
+  width: 50%;
+}
+.header__promo h1 {
+  font-weight: 600;
+  font-size: 5em;
+  font-style: italic;
+  margin: 0;
+}
+.header__promo p {
+  margin-top: 1rem;
+  display: block;
+  font-size: 3em;
+  font-weight: 100;
+  font-style: italic;
+}
+.header__button {
+  margin-top: 2rem;
 }/*# sourceMappingURL=index.css.map */
