--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
 	height: 100vh;
 	background: url('../../assets/img/back.jpg') no-repeat center center;
-	background-size: 100%;
+	background-size: cover;
 	&__wrap {
 		display: flex;
 		align-items: center;
