--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -6,9 +6,12 @@ body {
 	font-size: 14px;
 	color: white;
 	font-weight: 300;
+	@media (max-width: 400px) {
+		font-size: 12px;
+	}
 }
 
-h1,
+h1, h2,
 p,
 a,
 button {
@@ -19,6 +22,12 @@ button {
 	position: relative;
 	max-width: 100%;
 	margin: 0 4em;
+	@media (max-width: 914px) {
+		margin: 0 2em;
+	}
+	@media (max-width: 500px) {
+		margin: 0 1em;
+	}
 }
 
 .button {
