--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -19,6 +19,10 @@
 		justify-content: space-between;
 		list-style: none;
 
+		@media (max-width: 1021px) {
+			display: none;
+		}
+
 		& li {
 			margin: 0 2em;
 			display: inline-flex;
@@ -38,12 +42,22 @@
 
 	&__menu {
 		margin-left: 4em;
+
+		@media (max-width: 914px) {
+			margin-left: 2em;
+		}
+
+		@media (max-width: 500px) {
+			margin-left: 1em;
+		}
+
 		width: 40px;
 		height: 30px;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
+		transition: all 0.8s ease;
 
 		& span {
 			position: relative;
@@ -54,10 +68,10 @@
 
 			&::after {
 				transition: all 0.3s ease;
-				-webkit-transition: all 0.5s ease;
-				-moz-transition: all 0.5s ease;
-				-ms-transition: all 0.5s ease;
-				-o-transition: all 0.5s ease;
+				-webkit-transition: all 0.3s ease;
+				-moz-transition: all 0.3s ease;
+				-ms-transition: all 0.3s ease;
+				-o-transition: all 0.3s ease;
 				content: '';
 				display: block;
 				position: absolute;
@@ -75,11 +89,24 @@
 					width: 100%;
 				}
 			}
+
+			transform: rotate(180deg);
+			-webkit-transform: rotate(180deg);
+			-moz-transform: rotate(180deg);
+			-ms-transform: rotate(180deg);
+			-o-transform: rotate(180deg);
 		}
 	}
 
 	&__call {
 		margin-right: 4em;
 
+		@media (max-width: 914px) {
+			margin-right: 2em;
+		}
+
+		@media (max-width: 500px) {
+			margin-right: 1em;
+		}
 	}
 }
