--- a/src/sass/components/_offers.scss
+++ b/src/sass/components/_offers.scss
@@ -9,22 +9,25 @@
 		justify-content: space-between;
 		align-items: center;
 		padding: 1.6em 0;
-		
+
 	}
 
 	&__item {
 		width: 24%;
+
 		@media (max-width: 1342px) {
 			width: 49%;
-			margin-bottom: 2em;	
+			margin-bottom: 2em;
 		}
+
 		@media (max-width: 914px) {
 			width: 100%;
 		}
-		&:hover {
 
+		&:hover {
+			cursor: pointer;
 			& img {
-				cursor: pointer;
+				opacity: 0.1;
 				transform: scale(1.01);
 				-webkit-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
 				-moz-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
@@ -34,12 +37,44 @@
 				-ms-transform: scale(1.01);
 				-o-transform: scale(1.01);
 				outline: 10px solid #80766810;
-}
+			}
+
+			& div {
+				& p {
+					opacity: 1;
+				}
+			}
 		}
 	}
 
 	&__img {
 		width: 100%;
+		margin: 0;
+
+		&-wrap {
+			position: relative;
+
+			& p {
+				position: absolute;
+				font-size: 2em;
+				font-weight: 100;
+				font-style: italic;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				text-align: center;
+				margin: auto;
+				width: 200px;
+				height: 40px;
+				opacity: 0;
+				transition: all 0.2s ease;
+				-webkit-transition: all 0.2s ease;
+				-moz-transition: all 0.2s ease;
+				-ms-transition: all 0.2s ease;
+				-o-transition: all 0.2s ease;
+			}
+		}
 
 		&_one {
 			border-radius: 50px 0 50px 0;
@@ -48,13 +83,14 @@
 			-ms-border-radius: 50px 0 50px 0;
 			-o-border-radius: 50px 0 50px 0;
 		}
+
 		&_two {
 			border-radius: 0 50px 0 50px;
 			-webkit-border-radius: 0 50px 0 50px;
 			-moz-border-radius: 0 50px 0 50px;
 			-ms-border-radius: 0 50px 0 50px;
 			-o-border-radius: 0 50px 0 50px;
-}
+		}
 
 		transition: all 0.2s ease;
 		-webkit-transition: all 0.2s ease;
