--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -525,8 +525,11 @@ button {
     width: 100%;
   }
 }
-.offers__item:hover img {
+.offers__item:hover {
   cursor: pointer;
+}
+.offers__item:hover img {
+  opacity: 0.1;
   transform: scale(1.01);
   -webkit-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
   -moz-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
@@ -537,8 +540,35 @@ button {
   -o-transform: scale(1.01);
   outline: 10px solid rgba(128, 118, 104, 0.062745098);
 }
+.offers__item:hover div p {
+  opacity: 1;
+}
 .offers__img {
   width: 100%;
+  margin: 0;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+}
+.offers__img-wrap {
+  position: relative;
+}
+.offers__img-wrap p {
+  position: absolute;
+  font-size: 2em;
+  font-weight: 100;
+  font-style: italic;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin: auto;
+  width: 200px;
+  height: 40px;
+  opacity: 0;
   transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
