feat: скролл, знакомство с мастером

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,5 @@
 @import 'components/header';
 @import 'components/offers';
 @import 'components/popup-nav';
+@import 'components/greet';
+@import 'components/slider';
