--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -32,6 +32,8 @@ button {
 
 .button {
 	padding: 20px 3em;
+	min-width: 150px;
+	text-align: center;
 	border: 1px solid white;
 	font-weight: 200;
 	border-radius: 50px;
