--- a/src/sass/components/_offers.scss
+++ b/src/sass/components/_offers.scss
@@ -1,6 +1,8 @@
+@import '../variables';
+
 .offers {
-	background-color: rgb(255, 251, 246);
-	color: #1a1a1a;
+	background-color: $offersbg;
+	color: $dark;
 
 	&__wrap {
 		width: 100%;
@@ -8,7 +10,7 @@
 		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
-		padding: 1.6em 0;
+		padding: 1.3rem 0;
 
 	}
 
@@ -17,7 +19,7 @@
 
 		@media (max-width: 1342px) {
 			width: 49%;
-			margin-bottom: 2em;
+			margin-bottom: 1.3rem;
 		}
 
 		@media (max-width: 914px) {
@@ -36,7 +38,7 @@
 				-moz-transform: scale(1.01);
 				-ms-transform: scale(1.01);
 				-o-transform: scale(1.01);
-				outline: 10px solid #80766810;
+				outline: 10px solid $outline;
 			}
 
 			& div {
