--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -346,6 +347,8 @@ button {
 
 .button {
   padding: 20px 3em;
+  min-width: 150px;
+  text-align: center;
   border: 1px solid white;
   font-weight: 200;
   border-radius: 50px;
@@ -509,7 +512,7 @@ button {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 1.6em 0;
+  padding: 1.3rem 0;
 }
 .offers__item {
   width: 24%;
@@ -517,7 +520,7 @@ button {
 @media (max-width: 1342px) {
   .offers__item {
     width: 49%;
-    margin-bottom: 2em;
+    margin-bottom: 1.3rem;
   }
 }
 @media (max-width: 914px) {
@@ -665,4 +668,187 @@ button {
   -o-transform: scale(1.01);
   color: #554c3e;
   cursor: pointer;
+}
+
+.greet {
+  position: relative;
+  background-color: rgb(54, 51, 47);
+  background: url("../../assets/img/pat.webp");
+}
+.greet__dark {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(54, 51, 47);
+  opacity: 0.7;
+}
+.greet__wrap {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.greet__left {
+  background-color: #40312b;
+  z-index: 80;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  outline: 2px dashed rgb(255, 251, 246);
+}
+.greet__left h1 {
+  font-size: 2em;
+  font-weight: 100;
+  margin-top: 2rem;
+}
+.greet__left p {
+  margin-top: 1em;
+  color: #ccc;
+  font-weight: 100;
+  font-size: 1em;
+  padding: 1em;
+  font-style: italic;
+  margin: 0 auto;
+}
+.greet__btn {
+  margin: 0 auto;
+  margin-top: 0.5em;
+  margin-bottom: 2rem;
+  width: 100px;
+  border: none;
+  background-color: #393939;
+}
+
+/**
+  * SimpleAdaptiveSlider by itchief (https://github.com/itchief/ui-components/tree/master/simple-adaptive-slider)
+  * Copyright 2020 - 2022 Alexander Maltsev
+  * Licensed under MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
+  */
+/* стили для корневого элемента слайдера */
+.itcss {
+  position: relative;
+  max-width: 600px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* стили для wrapper */
+.itcss__wrapper {
+  position: relative;
+  overflow: hidden;
+  background-color: #eee;
+}
+
+/* стили для элемента, в котором непосредственно расположены элементы (слайды) */
+.itcss__items {
+  display: flex;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  transition: transform 0.5s ease;
+  will-change: transform;
+}
+
+/* стили для элементов */
+.itcss__item {
+  position: relative;
+  flex: 0 0 100%;
+  max-width: 100%;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  will-change: transform;
+}
+
+/* кнопки Prev и Next */
+.itcss__btn {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3rem;
+  height: 4rem;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.1);
+  border: none;
+  outline: none;
+  transform: translateY(-50%);
+  cursor: pointer;
+  opacity: 0.5;
+  user-select: none;
+}
+
+.itcss__btn_hide {
+  display: none;
+}
+
+.itcss__btn:hover,
+.itcss__btn:focus {
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  opacity: 0.7;
+}
+
+.itcss__btn_prev {
+  left: 0;
+}
+
+.itcss__btn_next {
+  right: 0;
+}
+
+.itcss__btn::before {
+  content: "";
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background: transparent no-repeat center center;
+  background-size: 100% 100%;
+}
+
+.itcss__btn_prev::before {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+
+.itcss__btn_next::before {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+/* Индикаторы */
+.itcss__indicators {
+  position: absolute;
+  right: 0;
+  bottom: 10px;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  margin: 0 15%;
+  padding-left: 0;
+  list-style: none;
+  user-select: none;
+}
+
+.itcss__indicator {
+  flex: 0 1 auto;
+  width: 30px;
+  height: 2px;
+  margin-right: 3px;
+  margin-left: 3px;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-clip: padding-box;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  cursor: pointer;
+}
+
+.itcss__indicator_active {
+  background-color: #fff;
+}
+
+/* класс для отключения transition */
+.transition-none {
+  transition: none;
 }/*# sourceMappingURL=index.css.map */
