--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,9 @@
 $bgcol: #f6f1e7;
 $linkhover: #554c3e;
 $nav: #00000080;
-$dark: #1a1a1a;
+$dark: #333333;
 $outline: #80766810;
 $offersbg: rgb(255, 251, 246);
 $smoke: #393939;
 $greetbg: rgb(54, 51, 47);
+$schoolbg: rgb(202, 193, 185);
