--- a/src/sass/components/_greet.scss
+++ b/src/sass/components/_greet.scss
@@ -4,6 +4,10 @@
 	position: relative;
 	background-color: $greetbg;
 	background: url('../../assets/img/pat.webp');
+	&__container {
+		height: 100%;
+		margin: auto;
+	}
 	&__dark {
 		position: absolute;
 		top: 0;
@@ -15,8 +19,9 @@
 	}
 	&__wrap {
 		width: 100%;
+		height: 100%;
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
 	}
 
 	&__left {
@@ -24,10 +29,13 @@
 		z-index: 80;
 		display: flex;
 		flex-direction: column;
-		width: 50%;
+		width: 100%;
 		height: 100%;
 		text-align: center;
-		outline: 2px dashed $offersbg;
+		border-right: 2px dashed $offersbg;
+		border-left: 2px dashed $offersbg;
+		margin: 0;
+		
 		@media (max-width:800px) {
 			width: 100%;
 		}
