--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,25 +8,34 @@
 	}
 
 	&__promo {
+		height: 30%;
 		margin-top: 35vh;
 		width: 100%;
 		text-align: center;
-
 		& h1 {
-			font-weight: 600;
-			font-size: 5em;
+			font-weight: 300;
+			font-size: 5rem;
 			font-style: italic;
 			margin: 0;
+			@media (max-width: 900px) {
+				font-size: 3rem;
+			}
 		}
 
 		& p {
-			margin-top: 1rem;
+			margin-top: 0.5rem;
 			display: block;
-			font-size: 3em;
+			font-size: 1rem;
 			font-weight: 100;
 			font-style: italic;
-			margin-bottom: 2em;
-
+			margin-bottom: 1.5rem;
+			@media (max-width: 900px) {
+				font-size: 1rem;
+				margin-bottom: 1rem;
+			}
+		}
+		& a {
+			margin: 0 auto;
 		}
 	}
 }
