--- a/src/sass/components/_offers.scss
+++ b/src/sass/components/_offers.scss
@@ -3,6 +3,7 @@
 .offers {
 	background-color: $offersbg;
 	color: $dark;
+
 	&__head {
 		width: 100%;
 		text-align: center;
@@ -11,13 +12,15 @@
 		font-size: 2em;
 		font-weight: 200;
 	}
+
 	&__wrap {
 		width: 100%;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
-		padding: 1.3rem 0;
+		padding-top: 1.3rem;
+		padding-bottom: 4rem;
 
 	}
 
@@ -35,6 +38,7 @@
 
 		&:hover {
 			cursor: pointer;
+
 			& img {
 				opacity: 0.1;
 				transform: scale(1.01);
