--- a/src/sass/components/_popup-nav.scss
+++ b/src/sass/components/_popup-nav.scss
@@ -2,7 +2,7 @@
 
 .popup-nav {
 	position: fixed;
-	left: -100%;
+	left: -500px;
 	z-index: 101;
 	color: $dark;
 	width: 500px;
@@ -74,10 +74,10 @@
 			}
 		}
 	}
-	transition: all 1s ease-out;
-	-webkit-transition: all 1s ease-out;
-	-moz-transition: all 1s ease-out;
-	-ms-transition: all 1s ease-out;
-	-o-transition: all 1s ease-out;
+	transition: all 0.5s ease-out;
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
 }
 
