--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -346,8 +346,9 @@ button {
 }
 
 .button {
+  display: block;
   padding: 20px 3em;
-  min-width: 150px;
+  max-width: 150px;
   text-align: center;
   border: 1px solid white;
   font-weight: 200;
@@ -483,28 +484,43 @@ button {
   align-items: center;
 }
 .header__promo {
+  height: 30%;
   margin-top: 35vh;
   width: 100%;
   text-align: center;
 }
 .header__promo h1 {
-  font-weight: 600;
-  font-size: 5em;
+  font-weight: 300;
+  font-size: 5rem;
   font-style: italic;
   margin: 0;
 }
+@media (max-width: 900px) {
+  .header__promo h1 {
+    font-size: 3rem;
+  }
+}
 .header__promo p {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   display: block;
-  font-size: 3em;
+  font-size: 1rem;
   font-weight: 100;
   font-style: italic;
-  margin-bottom: 2em;
+  margin-bottom: 1.5rem;
+}
+@media (max-width: 900px) {
+  .header__promo p {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+.header__promo a {
+  margin: 0 auto;
 }
 
 .offers {
   background-color: rgb(255, 251, 246);
-  color: #1a1a1a;
+  color: #333333;
 }
 .offers__head {
   width: 100%;
@@ -520,7 +536,8 @@ button {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 1.3rem 0;
+  padding-top: 1.3rem;
+  padding-bottom: 4rem;
 }
 .offers__item {
   width: 24%;
@@ -609,18 +626,18 @@ button {
 
 .popup-nav {
   position: fixed;
-  left: -100%;
+  left: -500px;
   z-index: 101;
-  color: #1a1a1a;
+  color: #333333;
   width: 500px;
   max-width: 100%;
   background-color: #f6f1e7;
   height: 100%;
-  transition: all 1s ease-out;
-  -webkit-transition: all 1s ease-out;
-  -moz-transition: all 1s ease-out;
-  -ms-transition: all 1s ease-out;
-  -o-transition: all 1s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
 }
 .popup-nav_active {
   left: 0%;
@@ -683,6 +700,10 @@ button {
   background-color: rgb(54, 51, 47);
   background: url("../../assets/img/pat.webp");
 }
+.greet__container {
+  height: 100%;
+  margin: auto;
+}
 .greet__dark {
   position: absolute;
   top: 0;
@@ -694,18 +715,21 @@ button {
 }
 .greet__wrap {
   width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .greet__left {
   background-color: #40312b;
   z-index: 80;
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   height: 100%;
   text-align: center;
-  outline: 2px dashed rgb(255, 251, 246);
+  border-right: 2px dashed rgb(255, 251, 246);
+  border-left: 2px dashed rgb(255, 251, 246);
+  margin: 0;
 }
 @media (max-width: 800px) {
   .greet__left {
@@ -864,4 +888,224 @@ button {
 /* класс для отключения transition */
 .transition-none {
   transition: none;
+}
+
+.school {
+  background-color: rgb(202, 193, 185);
+  color: #333333;
+  height: 700px;
+}
+.school .container {
+  height: 100%;
+}
+@media (max-width: 600px) {
+  .school {
+    height: 100%;
+  }
+}
+.school__wrap {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1038px) {
+  .school__wrap {
+    flex-direction: column;
+    position: relative;
+  }
+}
+.school__left {
+  width: 50%;
+  height: 100%;
+  position: relative;
+}
+@media (max-width: 1038px) {
+  .school__left {
+    width: 60%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+}
+@media (max-width: 860px) {
+  .school__left {
+    left: 0;
+  }
+}
+@media (max-width: 670px) {
+  .school__left {
+    height: 0;
+  }
+}
+.school__left__img {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  display: block;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-box-shadow: -60px 0px 42px -29px rgba(34, 34, 34, 0.31);
+  -moz-box-shadow: -60px 0px 42px -29px rgba(34, 34, 34, 0.31);
+  box-shadow: -60px 0px 42px -29px rgba(34, 34, 34, 0.31);
+}
+.school__left__img1 {
+  position: absolute;
+  background: url("../../assets/img/round_nails.png") no-repeat center center;
+  background-size: 100%;
+  top: 2rem;
+  right: 3rem;
+  z-index: 9;
+}
+@media (max-width: 1388px) {
+  .school__left__img1 {
+    top: 6rem;
+  }
+}
+@media (max-width: 1038px) {
+  .school__left__img1 {
+    opacity: 0.5;
+  }
+}
+@media (max-width: 860px) {
+  .school__left__img1 {
+    display: none;
+  }
+}
+.school__left__img2 {
+  position: absolute;
+  background: url("../../assets/img/round_scissors.png") no-repeat center center;
+  background-size: 100% 100%;
+  top: 10rem;
+  left: 0;
+  z-index: 8;
+}
+@media (max-width: 1388px) {
+  .school__left__img2 {
+    display: none;
+  }
+}
+.school__left__mapple1 {
+  position: absolute;
+  top: 2rem;
+  left: 0;
+  z-index: 20;
+  width: 230px;
+  opacity: 0.8;
+  transform: rotate(-50deg);
+  -webkit-transform: rotate(-50deg);
+  -moz-transform: rotate(-50deg);
+  -ms-transform: rotate(-50deg);
+  -o-transform: rotate(-50deg);
+  z-index: 0;
+}
+@media (max-width: 1038px) {
+  .school__left__mapple1 {
+    display: none;
+  }
+}
+.school__left__mapple2 {
+  position: absolute;
+  top: 27rem;
+  right: 3rem;
+  z-index: 20;
+  width: 200px;
+  opacity: 0.8;
+  transform: rotate(38deg);
+  -webkit-transform: rotate(38deg);
+  -moz-transform: rotate(38deg);
+  -ms-transform: rotate(38deg);
+  -o-transform: rotate(38deg);
+}
+@media (max-width: 1038px) {
+  .school__left__mapple2 {
+    right: 0;
+  }
+}
+@media (max-width: 800px) {
+  .school__left__mapple2 {
+    top: 10rem;
+  }
+}
+@media (max-width: 600px) {
+  .school__left__mapple2 {
+    top: 2rem;
+  }
+}
+@media (max-width: 800px) {
+  .school__left {
+    z-index: 0;
+    opacity: 0.1;
+  }
+}
+.school__right {
+  display: block;
+  width: 50%;
+  height: 100%;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  border-left: 2px dashed #333333;
+}
+@media (max-width: 1038px) {
+  .school__right {
+    width: 100%;
+    border: none;
+    z-index: 30;
+  }
+}
+.school__right div {
+  height: 100%;
+  margin: 0 3em;
+}
+@media (max-width: 1038px) {
+  .school__right div {
+    width: 100%;
+    border: none;
+    z-index: 30;
+    margin: 0;
+  }
+}
+.school__right div h1 {
+  display: block;
+  font-size: 5rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-style: italic;
+  margin: 2rem 0;
+  margin-top: 10rem;
+}
+@media (max-width: 620px) {
+  .school__right div h1 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 600px) {
+  .school__right div h1 {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 360px) {
+  .school__right div h1 {
+    font-size: 2rem;
+  }
+}
+.school__right div p {
+  display: block;
+  max-width: 60%;
+  font-size: 1em;
+  margin: 2rem 0;
+}
+.school__right div a {
+  background-color: #333333;
+  border: none;
+  color: rgb(202, 193, 185);
+  margin-bottom: 11rem;
+}
+@media (max-width: 600px) {
+  .school__right div a {
+    margin-bottom: 2rem;
+  }
 }/*# sourceMappingURL=index.css.map */
