--- a/src/sass/components/_school.scss
+++ b/src/sass/components/_school.scss
@@ -30,8 +30,7 @@
 			width: 60%;
 			position: absolute;
 			top: 0;
-			right: 0;
-			left: 0;
+			right: 1rem;
 		}
 		@media(max-width: 860px) {
 			left: 0;
