--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -924,8 +924,7 @@ button {
     width: 60%;
     position: absolute;
     top: 0;
-    right: 0;
-    left: 0;
+    right: 1rem;
   }
 }
 @media (max-width: 860px) {
