--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,131 +1,79 @@
-/**
-  * SimpleAdaptiveSlider by itchief (https://github.com/itchief/ui-components/tree/master/simple-adaptive-slider)
-  * Copyright 2020 - 2022 Alexander Maltsev
-  * Licensed under MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
-  */
+body {
+	margin: 0;
+	padding: 0;
+}
 
-/* стили для корневого элемента слайдера */
-.itcss {
-	position: relative;
-	max-width: 600px;
-	margin-right: auto;
-	margin-left: auto;
-  }
-  
-  /* стили для wrapper */
-  .itcss__wrapper {
-	position: relative;
-	overflow: hidden;
-	background-color: #eee;
-  }
-  
-  /* стили для элемента, в котором непосредственно расположены элементы (слайды) */
-  .itcss__items {
-	display: flex;
-	transform-style: preserve-3d;
-	backface-visibility: hidden;
-	transition: transform 0.5s ease;
-	will-change: transform;
-  }
-  
-  /* стили для элементов */
-  .itcss__item {
-	position: relative;
-	flex: 0 0 100%;
-	max-width: 100%;
-	transform-style: preserve-3d;
-	backface-visibility: hidden;
-	will-change: transform;
-  }
-  
-  /* кнопки Prev и Next */
-  .itcss__btn {
-	position: absolute;
-	top: 50%;
+.slider-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 3rem;
-	height: 4rem;
-	color: #fff;
-	background: rgb(0 0 0 / 10%);
-	border: none;
-	outline: none;
-	transform: translateY(-50%);
-	cursor: pointer;
-	opacity: 0.5;
-	user-select: none;
-  }
-  
-  .itcss__btn_hide {
-	display: none;
-  }
-  
-  .itcss__btn:hover,
-  .itcss__btn:focus {
-	color: #fff;
-	text-decoration: none;
-	border: none;
-	opacity: 0.7;
-  }
-  
-  .itcss__btn_prev {
-	left: 0;
-  }
-  
-  .itcss__btn_next {
-	right: 0;
-  }
-  
-  .itcss__btn::before {
-	content: "";
-	display: inline-block;
-	width: 2rem;
-	height: 2rem;
-	background: transparent no-repeat center center;
-	background-size: 100% 100%;
-  }
-  
-  .itcss__btn_prev::before {
-	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
-  }
-  
-  .itcss__btn_next::before {
-	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  }
-  
-  /* Индикаторы */
-  .itcss__indicators {
-	position: absolute;
-	right: 0;
-	bottom: 10px;
-	left: 0;
+}
+
+
+.slider {
 	display: flex;
-	justify-content: center;
-	margin: 0 15%;
-	padding-left: 0;
-	list-style: none;
-	user-select: none;
-  }
-  
-  .itcss__indicator {
-	flex: 0 1 auto;
-	width: 30px;
-	height: 2px;
-	margin-right: 3px;
-	margin-left: 3px;
-	background-color: rgb(255 255 255 / 50%);
-	background-clip: padding-box;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
+	position: relative;
+	width: 600px;
+	height: auto;
+	overflow: hidden;
+	margin: 0 10px;
+}
+
+.arrow1{
+	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+}
+
+.arrow {
+	opacity: 0.2;
 	cursor: pointer;
+	width: 40px;
+	height: 40px;
+}
+
+.items {
+	width: 600px;
+	max-width: 100%;
+	min-height: 425px;
+	display: flex;
+	position: relative;
+	color: #444;
+	font-size: 30px;
+	margin: 0 auto;
+	overflow: hidden;
+	
+	border-radius: 14px;
+	-webkit-border-radius: 14px;
+	-moz-border-radius: 14px;
+	-ms-border-radius: 14px;
+	-o-border-radius: 14px;
+}
+
+.item {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	/*   display: flex;
+	align-items: center;
+	justify-content: center; */
+	background-color: white;
+	/*   box-sizing: border-box; */
+	/*   border: 1px solid #444; */
+	transition: all ease .6s;
+	left: 0;
+	top: 0;
+	vertical-align: middle;
+	& img {
+		width: 100%;
+		margin: auto 0;
+		display: inline-block;
+	}
+}
+
+/* .item ~ .item {
+	border-left: none;
   }
-  
-  .itcss__indicator_active {
-	background-color: #fff;
-  }
-  
-  /* класс для отключения transition */
-  .transition-none {
-	transition: none;
-  }
+   */
