--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -759,137 +758,83 @@ button {
   background-color: #393939;
 }
 
-/**
-  * SimpleAdaptiveSlider by itchief (https://github.com/itchief/ui-components/tree/master/simple-adaptive-slider)
-  * Copyright 2020 - 2022 Alexander Maltsev
-  * Licensed under MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
-  */
-/* стили для корневого элемента слайдера */
-.itcss {
-  position: relative;
-  max-width: 600px;
-  margin-right: auto;
-  margin-left: auto;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-/* стили для wrapper */
-.itcss__wrapper {
-  position: relative;
-  overflow: hidden;
-  background-color: #eee;
-}
-
-/* стили для элемента, в котором непосредственно расположены элементы (слайды) */
-.itcss__items {
-  display: flex;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-  transition: transform 0.5s ease;
-  will-change: transform;
-}
-
-/* стили для элементов */
-.itcss__item {
-  position: relative;
-  flex: 0 0 100%;
-  max-width: 100%;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-  will-change: transform;
-}
-
-/* кнопки Prev и Next */
-.itcss__btn {
-  position: absolute;
-  top: 50%;
+.slider-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 3rem;
-  height: 4rem;
-  color: #fff;
-  background: rgba(0, 0, 0, 0.1);
-  border: none;
-  outline: none;
-  transform: translateY(-50%);
-  cursor: pointer;
-  opacity: 0.5;
-  user-select: none;
 }
 
-.itcss__btn_hide {
-  display: none;
-}
-
-.itcss__btn:hover,
-.itcss__btn:focus {
-  color: #fff;
-  text-decoration: none;
-  border: none;
-  opacity: 0.7;
-}
-
-.itcss__btn_prev {
-  left: 0;
-}
-
-.itcss__btn_next {
-  right: 0;
-}
-
-.itcss__btn::before {
-  content: "";
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.itcss__btn_prev::before {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
-}
-
-.itcss__btn_next::before {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
-
-/* Индикаторы */
-.itcss__indicators {
-  position: absolute;
-  right: 0;
-  bottom: 10px;
-  left: 0;
+.slider {
   display: flex;
-  justify-content: center;
-  margin: 0 15%;
-  padding-left: 0;
-  list-style: none;
-  user-select: none;
+  position: relative;
+  width: 600px;
+  height: auto;
+  overflow: hidden;
+  margin: 0 10px;
 }
 
-.itcss__indicator {
-  flex: 0 1 auto;
-  width: 30px;
-  height: 2px;
-  margin-right: 3px;
-  margin-left: 3px;
-  background-color: rgba(255, 255, 255, 0.5);
-  background-clip: padding-box;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+.arrow1 {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+
+.arrow {
+  opacity: 0.2;
   cursor: pointer;
+  width: 40px;
+  height: 40px;
 }
 
-.itcss__indicator_active {
-  background-color: #fff;
+.items {
+  width: 600px;
+  max-width: 100%;
+  min-height: 425px;
+  display: flex;
+  position: relative;
+  color: #444;
+  font-size: 30px;
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
 }
 
-/* класс для отключения transition */
-.transition-none {
-  transition: none;
+.item {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /*   display: flex;
+  align-items: center;
+  justify-content: center; */
+  background-color: white;
+  /*   box-sizing: border-box; */
+  /*   border: 1px solid #444; */
+  transition: all ease 0.6s;
+  left: 0;
+  top: 0;
+  vertical-align: middle;
+}
+.item img {
+  width: 100%;
+  margin: auto 0;
+  display: inline-block;
 }
 
+/* .item ~ .item {
+	border-left: none;
+  }
+   */
 .school {
   background-color: rgb(202, 193, 185);
   color: #333333;
@@ -1107,4 +1052,81 @@ button {
   .school__right div a {
     margin-bottom: 2rem;
   }
+}
+
+.examples {
+  text-align: center;
+  padding-bottom: 3rem;
+}
+.examples__title {
+  display: block;
+  font-size: 2rem;
+  color: #333333;
+  font-weight: 200;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.examples__wrap {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+}
+@media (max-width: 1038px) {
+  .examples__wrap {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .examples__wrap {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+  }
+}
+.examples__wrap img {
+  width: 100%;
+  border-radius: 10px 0 10px 0;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -webkit-border-radius: 10px 0 10px 0;
+  -moz-border-radius: 10px 0 10px 0;
+  -ms-border-radius: 10px 0 10px 0;
+  -o-border-radius: 10px 0 10px 0;
+}
+
+.reviews {
+  background: white;
+  color: black;
+}
+.reviews__wrap {
+  width: 800px;
+  margin: 0 auto;
+  padding-bottom: 3rem;
+  max-width: 100%;
+  position: relative;
+}
+.reviews__title {
+  width: 100%;
+  text-align: center;
+  display: block;
+  font-size: 2rem;
+  font-weight: 200;
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+}
+.reviews__title2 {
+  width: 100%;
+  text-align: center;
+  display: block;
+  font-size: 1rem;
+  color: #ccc;
+  font-weight: 200;
+  font-style: italic;
+  margin-bottom: 1rem;
 }/*# sourceMappingURL=index.css.map */
