--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,3 +10,6 @@
 @import 'components/greet';
 @import 'components/slider';
 @import 'components/school';
+@import 'components/examples';
+@import 'components/reviews';
+
