--- a/src/sass/components/_examples.scss
+++ b/src/sass/components/_examples.scss
@@ -5,14 +5,23 @@
 	padding-bottom: 3rem;
 	&__title {
 		display: block;
-		font-size: 2rem;
+		font-size: 3rem;
 		color: $dark;
 		font-weight: 200;
 		width: 100%;
 		margin-top: 2rem;
-		margin-bottom: 2rem;
+		margin-bottom: 1rem;
 	}
-
+	&__title2 {
+		width: 100%;
+		text-align: center;
+		display: block;
+		font-size: 1rem;
+		color: #5c5c5c;
+		font-weight: 200;
+		font-style: italic;
+		margin-bottom: 1rem;
+	}
 	&__wrap {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
