--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,6 +1,7 @@
+@import '../variables';
 .reviews {
 	background: white;
-	color: black;
+	color: $dark;
 	&__wrap {
 		width: 800px;
 		margin: 0 auto;
@@ -12,7 +13,7 @@
 		width: 100%;
 		text-align: center;
 		display: block;
-		font-size: 2rem;
+		font-size: 3rem;
 		font-weight: 200;
 		padding-top: 2rem;
 		margin-bottom: 1rem;
