--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -19,7 +19,7 @@ body {
 	margin: 0 10px;
 }
 
-.arrow1{
+.arrow1 {
 	transform: rotate(180deg);
 	-webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
@@ -32,6 +32,19 @@ body {
 	cursor: pointer;
 	width: 40px;
 	height: 40px;
+	transition: all 0.1s ease;
+	-webkit-transition: all 0.1s ease;
+	-moz-transition: all 0.1s ease;
+	-ms-transition: all 0.1s ease;
+	-o-transition: all 0.1s ease;
+
+	&:hover {
+		transform: scale(1.2);
+		-webkit-transform: scale(1.2);
+		-moz-transform: scale(1.2);
+		-ms-transform: scale(1.2);
+		-o-transform: scale(1.2);
+	}
 }
 
 .items {
@@ -44,7 +57,7 @@ body {
 	font-size: 30px;
 	margin: 0 auto;
 	overflow: hidden;
-	
+
 	border-radius: 14px;
 	-webkit-border-radius: 14px;
 	-moz-border-radius: 14px;
@@ -66,6 +79,7 @@ body {
 	left: 0;
 	top: 0;
 	vertical-align: middle;
+
 	& img {
 		width: 100%;
 		margin: auto 0;
