--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -6,12 +6,14 @@ body {
 	font-size: 16px;
 	color: white;
 	font-weight: 300;
+
 	@media (max-width: 400px) {
 		font-size: 12px;
 	}
 }
 
-h1, h2,
+h1,
+h2,
 p,
 a,
 button {
@@ -22,9 +24,11 @@ button {
 	position: relative;
 	max-width: 100%;
 	margin: 0 4em;
+
 	@media (max-width: 914px) {
 		margin: 0 2em;
 	}
+
 	@media (max-width: 500px) {
 		margin: 0 1em;
 	}
@@ -51,9 +55,31 @@ button {
 		-moz-box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
 		box-shadow: 0px 0px 45px 0px rgba(78, 85, 62, 0.4);
 	}
+
 	transition: all 0.2s ease;
 	-webkit-transition: all 0.2s ease;
 	-moz-transition: all 0.2s ease;
 	-ms-transition: all 0.2s ease;
 	-o-transition: all 0.2s ease;
+}
+
+#myVideo {
+	position: fixed;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	z-index: -20;
+	left: auto;
+}
+
+.element-animation {
+	/* Скроем элемент в начальном состоянии */
+	opacity: 0;
+	transform: translateY(100%);
+}
+
+.element-animation.element-show {
+	opacity: 1;
+	transition: all 1s;
+	transform: translateY(0%);
 }
