--- a/src/sass/components/_examples.scss
+++ b/src/sass/components/_examples.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
 .examples {
+	background-color: $bgcol;
 	text-align: center;
 	padding-bottom: 3rem;
 	&__title {
@@ -9,7 +10,7 @@
 		color: $dark;
 		font-weight: 200;
 		width: 100%;
-		margin-top: 2rem;
+		padding-top: 2rem;
 		margin-bottom: 1rem;
 	}
 	&__title2 {
@@ -26,8 +27,8 @@
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(2, 1fr);
-		grid-column-gap: 2rem;
-		grid-row-gap: 2rem;
+		grid-column-gap: 4rem;
+		grid-row-gap: 4rem;
 		@media (max-width: 1038px) {
 			grid-template-columns: repeat(2, 1fr);
 			grid-column-gap: 1rem;
@@ -41,14 +42,33 @@
 
 		& img {
 			width: 100%;
-			border-radius: 10px 0 10px 0;
-			-webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-			-moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-			box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-			-webkit-border-radius: 10px 0 10px 0;
-			-moz-border-radius: 10px 0 10px 0;
-			-ms-border-radius: 10px 0 10px 0;
-			-o-border-radius: 10px 0 10px 0;
-}
+			outline: 5px solid white;
+			-webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.5);
+			-moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.5);
+			box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.5);
+			-webkit-border-radius: 0px 0 0px 0;
+			-moz-border-radius: 0px 0 0px 0;
+			-ms-border-radius: 0px 0 0px 0;
+			-o-border-radius: 0px 0 0px 0;
+		}		
 	}
+}
+
+.rotate_left {
+	transform: rotate(1deg);
+	-webkit-transform: rotate(1deg);
+	-moz-transform: rotate(1deg);
+	-ms-transform: rotate(1deg);
+	-o-transform: rotate(1deg);
+	z-index: 30;
+	margin-top: 20px;
+}
+
+.rotate_right {
+	transform: rotate(-1deg);
+	-webkit-transform: rotate(-1deg);
+	-moz-transform: rotate(-1deg);
+	-ms-transform: rotate(-1deg);
+	-o-transform: rotate(-1deg);
+	z-index: 31;
 }
