--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -3,42 +3,86 @@
 .footer {
 	display: block;
 	position: relative;
-	background-color: $greetbg;
-	background: url('../../assets/img/pat.webp');
 	height: 656px;
-	background-color: white;
+	color: #ffffff70;
 	&__container {
 		height: 100%
 	}
-	&__dark {
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-		background: black;
-		opacity: 0.7;
-	}
 	&__wrap {
+		z-index: 50;
 		width: 100%;
 		height: 100%;
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		@media (max-width: 1038px) {
 			flex-direction: column;
 		}
 	}
 
 	&__left {
-		width: 48%;
-		padding-top: 26px;
+		width: 50%;
+
+		
 		@media (max-width: 1038px) {
 			width: 100%;
 		}
 	}
 	&__right {
+		height: 600px;
+		background-color: rgb(28, 28, 28);
+		margin: 26px 0;
+		width: 50%;
+		outline: 2px dashed #ffffff70;
+		
+		&__wrap {
+			padding: 3em 6rem;
+			@media (max-width: 600px) {
+				padding: 2em 2rem;
+			}
+			& h1 {
+				font-size: 3rem;
+				font-weight: 200;
+			}
+
+			& span {
+				margin-top: 1rem;
+				display: block;
+				font-weight: 200;
+				font-style: italic;
+				color: #ffffff40;
+			}
+
+			& ul {
+				bottom: 0;
+				padding: 0;
+				margin-top: 4rem;
+				& li {
+					margin-bottom: 1rem;
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					a {
+						font-style: italic;
+						&:hover {
+							cursor: pointer;
+							text-decoration: 1px underline dashed;
+
+}
+					}
+				}
+			}
+			
+		}
 		@media (max-width: 1038px) {
 			width: 100%;
 		}
 	}
+}
+
+.dev {
+	margin-top: 8em;
+	font-weight: 200;
+	font-style: italic;
+	color: #ffffff40;
 }
