--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -382,18 +382,6 @@ button {
   left: auto;
 }
 
-.element-animation {
-  /* Скроем элемент в начальном состоянии */
-  opacity: 0;
-  transform: translateY(100%);
-}
-
-.element-animation.element-show {
-  opacity: 1;
-  transition: all 1s;
-  transform: translateY(0%);
-}
-
 .nav {
   position: fixed;
   top: 0;
@@ -1009,12 +997,7 @@ body {
 }
 @media (max-width: 800px) {
   .school__left__mapple2 {
-    top: 10rem;
-  }
-}
-@media (max-width: 600px) {
-  .school__left__mapple2 {
-    top: 2rem;
+    display: none;
   }
 }
 @media (max-width: 800px) {
@@ -1091,6 +1074,18 @@ body {
   .school__right div a {
     margin-bottom: 2rem;
   }
+}
+
+.element-animation {
+  /* Скроем элемент в начальном состоянии */
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.element-animation.element-show {
+  opacity: 1;
+  transition: all 1s;
+  transform: translateY(0%);
 }
 
 .examples {
@@ -1203,28 +1198,19 @@ body {
 .footer {
   display: block;
   position: relative;
-  background-color: rgb(54, 51, 47);
-  background: url("../../assets/img/pat.webp");
   height: 656px;
-  background-color: white;
+  color: rgba(255, 255, 255, 0.4392156863);
 }
 .footer__container {
   height: 100%;
 }
-.footer__dark {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 0.7;
-}
 .footer__wrap {
+  z-index: 50;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 @media (max-width: 1038px) {
   .footer__wrap {
@@ -1232,16 +1218,66 @@ body {
   }
 }
 .footer__left {
-  width: 48%;
-  padding-top: 26px;
+  width: 50%;
 }
 @media (max-width: 1038px) {
   .footer__left {
     width: 100%;
   }
 }
+.footer__right {
+  height: 600px;
+  background-color: rgb(28, 28, 28);
+  margin: 26px 0;
+  width: 50%;
+  outline: 2px dashed rgba(255, 255, 255, 0.4392156863);
+}
+.footer__right__wrap {
+  padding: 3em 6rem;
+}
+@media (max-width: 600px) {
+  .footer__right__wrap {
+    padding: 2em 2rem;
+  }
+}
+.footer__right__wrap h1 {
+  font-size: 3rem;
+  font-weight: 200;
+}
+.footer__right__wrap span {
+  margin-top: 1rem;
+  display: block;
+  font-weight: 200;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.2509803922);
+}
+.footer__right__wrap ul {
+  bottom: 0;
+  padding: 0;
+  margin-top: 4rem;
+}
+.footer__right__wrap ul li {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__right__wrap ul li a {
+  font-style: italic;
+}
+.footer__right__wrap ul li a:hover {
+  cursor: pointer;
+  text-decoration: 1px underline dashed;
+}
 @media (max-width: 1038px) {
   .footer__right {
     width: 100%;
   }
+}
+
+.dev {
+  margin-top: 8em;
+  font-weight: 200;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.2509803922);
 }/*# sourceMappingURL=index.css.map */
