--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -539,10 +539,12 @@ button {
   font-size: 3em;
   font-weight: 200;
 }
-.offers {
+.offers__text {
+  display: block;
   text-align: center;
-  color: grey;
   font-style: italic;
+  color: grey;
+  margin-bottom: 0.5rem;
 }
 .offers__wrap {
   width: 100%;
@@ -600,7 +602,7 @@ button {
 .offers__img-wrap p {
   position: absolute;
   font-size: 2em;
-  font-weight: 100;
+  font-weight: 200;
   font-style: italic;
   top: 0;
   bottom: 0;
