--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -18,7 +18,13 @@
 		display: flex;
 		justify-content: space-between;
 		list-style: none;
-
+		width: 60%;
+		padding: 0;
+		& ul {
+			text-align: center;
+			width: 100%;
+			padding: 0;
+		}
 		@media (max-width: 1021px) {
 			display: none;
 		}
@@ -42,7 +48,9 @@
 
 	&__menu {
 		margin-left: 4em;
-
+		&__wrap {
+			width: 12%;
+		}
 		@media (max-width: 914px) {
 			margin-left: 2em;
 		}
@@ -100,7 +108,6 @@
 
 	&__call {
 		margin-right: 4em;
-
 		@media (max-width: 914px) {
 			margin-right: 2em;
 		}
