--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -67,8 +67,8 @@ button {
 	position: fixed;
 	top: 0;
 	left: 0;
-	min-width: 100%;
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
 	z-index: -20;
-	left: auto;
 }
-
