--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -377,9 +377,10 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  min-width: 100%;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   z-index: -20;
-  left: auto;
 }
 
 .nav {
@@ -723,21 +724,10 @@ button {
 
 .greet {
   position: relative;
-  background-color: rgb(54, 51, 47);
-  background: url("../../assets/img/pat.webp");
 }
 .greet__container {
   height: 100%;
   margin: auto;
-}
-.greet__dark {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(54, 51, 47);
-  opacity: 0.7;
 }
 .greet__wrap {
   width: 100%;
@@ -746,15 +736,12 @@ button {
   justify-content: center;
 }
 .greet__left {
-  background-color: #40312b;
   z-index: 80;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   text-align: center;
-  border-right: 2px dashed rgb(255, 251, 246);
-  border-left: 2px dashed rgb(255, 251, 246);
   margin: 0;
 }
 @media (max-width: 800px) {
@@ -766,6 +753,11 @@ button {
   font-size: 3em;
   font-weight: 100;
   margin-top: 2rem;
+}
+@media (max-width: 800px) {
+  .greet__left h1 {
+    font-size: 2rem;
+  }
 }
 .greet__left p {
   margin-top: 1em;
