--- a/src/sass/components/_examples.scss
+++ b/src/sass/components/_examples.scss
@@ -4,6 +4,7 @@
 	background-color: $bgcol;
 	text-align: center;
 	padding-bottom: 3rem;
+
 	&__title {
 		display: block;
 		font-size: 3rem;
@@ -13,6 +14,7 @@
 		padding-top: 2rem;
 		margin-bottom: 1rem;
 	}
+
 	&__title2 {
 		width: 100%;
 		text-align: center;
@@ -23,17 +25,20 @@
 		font-style: italic;
 		margin-bottom: 1rem;
 	}
+
 	&__wrap {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(2, 1fr);
 		grid-column-gap: 4rem;
 		grid-row-gap: 4rem;
+
 		@media (max-width: 1038px) {
 			grid-template-columns: repeat(2, 1fr);
 			grid-column-gap: 1rem;
 			grid-row-gap: 1rem;
 		}
+
 		@media (max-width: 500px) {
 			grid-template-columns: repeat(2, 1fr);
 			grid-column-gap: 0.5rem;
@@ -50,7 +55,7 @@
 			-moz-border-radius: 0px 0 0px 0;
 			-ms-border-radius: 0px 0 0px 0;
 			-o-border-radius: 0px 0 0px 0;
-		}		
+		}
 	}
 }
 
@@ -62,6 +67,19 @@
 	-o-transform: rotate(1deg);
 	z-index: 30;
 	margin-top: 20px;
+
+	&:hover {
+		transform: rotate(2deg) scale(1.1);
+		-webkit-transform: rotate(2deg) scale(1.1);
+		-moz-transform: rotate(2deg) scale(1.1);
+		-ms-transform: rotate(2deg) scale(1.1);
+		-o-transform: rotate(2deg) scale(1.1);
+	}
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
 }
 
 .rotate_right {
@@ -71,4 +89,17 @@
 	-ms-transform: rotate(-1deg);
 	-o-transform: rotate(-1deg);
 	z-index: 31;
+
+	&:hover {
+		transform: rotate(-2deg) scale(0.9);
+		-webkit-transform: rotate(-2deg) scale(0.9);
+		-moz-transform: rotate(-2deg) scale(0.9);
+		-ms-transform: rotate(-2deg) scale(0.9);
+		-o-transform: rotate(-2deg) scale(0.9);
+	}
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
 }
