--- a/src/sass/components/_school.scss
+++ b/src/sass/components/_school.scss
@@ -206,6 +206,10 @@
 
 .element-animation.element-show {
 	opacity: 1;
-	transition: all 1s;
+	transition: all 0.5s;
 	transform: translateY(0%);
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
 }
