--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,3 +7,4 @@ $offersbg: rgb(255, 251, 246);
 $smoke: #393939;
 $greetbg: rgb(54, 51, 47);
 $schoolbg: rgb(202, 193, 185);
+$green: rgb(179, 209, 182);
