--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .about {
-	background-color: $offersbg;
+	background-color: $green;
 	min-height: 20vh;
 
 	&__wrap {
@@ -13,7 +13,7 @@
 		&__left {
 			border-right: 1px dashed $dark;
 			border-left: 1px dashed $dark;
-			background-color: $schoolbg;
+			background-color: $green;
 			min-height: 20vh;
 			width: 100%;
 			position: relative;
@@ -25,27 +25,21 @@
 				z-index: 10;
 				right: 4em;
 				height: 90%;
-
+				transition: all 0.3s ease;
+				-webkit-transition: all 0.3s ease;
+				-moz-transition: all 0.3s ease;
+				-ms-transition: all 0.3s ease;
+				-o-transition: all 0.3s ease;
+				&:hover {
+					height: 92%;
+				}
 				@media (max-width: 1450px) {
 					opacity: 0.2;
 				}
+
 				@media (max-width: 710px) {
 					height: 50%;
 				}
-			}
-
-			&__mapple {
-				position: absolute;
-				bottom: 10px;
-				z-index: 10;
-				right: 20em;
-				height: 400px;
-				opacity: 0.7;
-				transform: rotate(-45deg);
-				-webkit-transform: rotate(-45deg);
-				-moz-transform: rotate(-45deg);
-				-ms-transform: rotate(-45deg);
-				-o-transform: rotate(-45deg);
 			}
 
 			&__info {
@@ -55,15 +49,18 @@
 				color: $dark;
 				max-width: 950px;
 				min-height: 20vh;
+
 				@media (max-width: 710px) {
 					padding: 2rem;
 				}
+
 				& h1 {
 					font-size: 5rem;
 					font-weight: 500;
 					font-style: italic;
 					text-transform: uppercase;
 					margin-bottom: 2rem;
+
 					@media (max-width: 710px) {
 						font-size: 3rem;
 					}
@@ -76,6 +73,7 @@
 					font-weight: 200;
 					text-transform: uppercase;
 					margin-bottom: 2rem;
+
 					@media (max-width: 710px) {
 						font-size: 2rem;
 					}
@@ -87,9 +85,11 @@
 					font-size: 1.5rem;
 					list-style: circle;
 					font-style: italic;
+
 					@media (max-width: 710px) {
 						font-size: 1rem;
 					}
+
 					& li {
 						margin-bottom: 1rem;
 						text-align: justify;
@@ -106,7 +106,7 @@
 								width: 40px;
 								height: 14px;
 								transform: skew(-12deg) translateX(-50%);
-								background: rgba(161, 134, 112, 0.381);
+								background: rgba(143, 143, 143, 0.381);
 								z-index: 0;
 							}
 						}
