--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,6 +14,8 @@
 @import 'components/reviews';
 @import 'components/footer';
 @import 'components/about';
+@import 'components/process';
+@import 'components/courses';
 
 
 
