--- a/src/sass/components/_courses.scss
+++ b/src/sass/components/_courses.scss
@@ -2,7 +2,7 @@
 
 .courses {
 	min-height: 100vh;
-	background-color: #ccc;
+	background-color: #f2f2f2;
 	color: $dark;
 
 	&__title {
@@ -31,17 +31,123 @@
 		grid-template-rows: 1fr;
 		grid-column-gap: 1rem;
 		grid-row-gap: 1rem;
+		padding-bottom: 2rem;
+		@media (max-width: 1500px) {
+			grid-template-columns: repeat(3, 1fr);
+		}
+		@media (max-width: 950px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+		@media (max-width: 650px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 
 	&__item {
 		width: 100%;
-		height: 400px;
 		background: $green;
+		-webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+		-moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+		box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+
 		& img {
 			width: 100%;
 		}
+
 		&__info {
-			
+			margin: 1rem;
+			text-align: center;
+			position: relative;
+			height: 240px;
+			& .bottom {
+				width: 100%;
+				position: absolute;
+				bottom: 0;
+				margin: 0;
+			}
+			& h2 {
+				display: block;
+				font-size: 1.2rem;
+				margin-top: 2rem;
+				margin-bottom: 0.5rem;
+				text-transform: uppercase;
+				font-style: italic;
+				font-weight: 500;
+				@media (max-width: 1096px) {
+					font-size: 1rem;
+				}
+				@media (max-width: 650px) {
+					font-size: 1.4rem;
+				}
+				@media (max-width: 450px) {
+					font-size: 1.2rem;
+				}
+				@media (max-width: 350px) {
+					font-size: 1rem;
+				}
+			}
+
+			& div {
+				font-size: 1rem;
+				margin-bottom: 1rem;
+
+				& .new {
+					color: #855050;
+					font-weight: 200;
+					font-size: 1.5rem;
+				}
+
+				& .old {
+					text-decoration: 1px line-through;
+					opacity: 0.8;
+				}
+
+			}
+
+			& span {
+				display: flex;
+				justify-content: space-between;
+
+
+			}
 		}
 	}
+}
+
+.enroll {
+	padding: 20px 0;
+	width: 50%;
+	background-color: white;
+	border: 1px solid white;
+	transition: all 0.1s ease;
+	-webkit-transition: all 0.1s ease;
+	-moz-transition: all 0.1s ease;
+	-ms-transition: all 0.1s ease;
+	-o-transition: all 0.1s ease;
+
+	&:hover {
+		cursor: pointer;
+		background: none;
+		color: white;
+	}
+}
+
+.more {
+	padding: 20px 0;
+	width: 50%;
+	background-color: $dark;
+	color: white;
+	border: 1px solid $dark;
+	transition: all 0.1s ease;
+	-webkit-transition: all 0.1s ease;
+	-moz-transition: all 0.1s ease;
+	-ms-transition: all 0.1s ease;
+	-o-transition: all 0.1s ease;
+
+	&:hover {
+		cursor: pointer;
+		background: none;
+		color: $dark;
+	}
+
 }
