--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -84,6 +84,11 @@ body {
 		width: 100%;
 		margin: auto 0;
 		display: inline-block;
+		border-radius: 14px;
+		-webkit-border-radius: 14px;
+		-moz-border-radius: 14px;
+		-ms-border-radius: 14px;
+		-o-border-radius: 14px;
 	}
 }
 
