Закончил с разделом курсы

--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 body {
-	background-color: $bgcol;
+	background-color: #2a2a2a;
 	font-family: 'Exo 2', sans-serif;
 	font-size: 16px;
 	color: white;
