--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -310,7 +310,7 @@ template {
 }
 
 body {
-  background-color: #f6f1e7;
+  background-color: #2a2a2a;
   font-family: "Exo 2", sans-serif;
   font-size: 16px;
   color: white;
